W06: Add last collection to project
