# swagger.json
@@ -1145,6 +1145,356 @@
           }
         }
       }
+    },
+    "/leader/by-allergies": {
+      "get": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/leader/by-food": {
+      "get": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/leader/by-sleep": {
+      "get": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "lodging_type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/leader/{id}": {
+      "get": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "timestamp": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "first_name": {
+                  "example": "any"
+                },
+                "last_name": {
+                  "example": "any"
+                },
+                "ward": {
+                  "example": "any"
+                },
+                "birthdate": {
+                  "example": "any"
+                },
+                "address_street": {
+                  "example": "any"
+                },
+                "address_city": {
+                  "example": "any"
+                },
+                "address_province": {
+                  "example": "any"
+                },
+                "address_postal": {
+                  "example": "any"
+                },
+                "emergency_contact_name": {
+                  "example": "any"
+                },
+                "emergency_contact_primary": {
+                  "example": "any"
+                },
+                "emergency_contact_secondary": {
+                  "example": "any"
+                },
+                "health_number": {
+                  "example": "any"
+                },
+                "diet_specific": {
+                  "example": "any"
+                },
+                "diet_description": {
+                  "example": "any"
+                },
+                "allergies": {
+                  "example": "any"
+                },
+                "allergies_description": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "arrival_date": {
+                  "example": "any"
+                },
+                "departure_date": {
+                  "example": "any"
+                },
+                "lodging_type": {
+                  "example": "any"
+                },
+                "lodging_description": {
+                  "example": "any"
+                },
+                "terms_understood": {
+                  "example": "any"
+                },
+                "media_consent_internal": {
+                  "example": "any"
+                },
+                "media_consent_external": {
+                  "example": "any"
+                },
+                "media_release_understood": {
+                  "example": "any"
+                },
+                "form_completed_by": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/leader/": {
+      "get": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Leader"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "first_name": {
+                  "example": "any"
+                },
+                "last_name": {
+                  "example": "any"
+                },
+                "ward": {
+                  "example": "any"
+                },
+                "birthdate": {
+                  "example": "any"
+                },
+                "address_street": {
+                  "example": "any"
+                },
+                "address_city": {
+                  "example": "any"
+                },
+                "address_province": {
+                  "example": "any"
+                },
+                "address_postal": {
+                  "example": "any"
+                },
+                "emergency_contact_name": {
+                  "example": "any"
+                },
+                "emergency_contact_primary": {
+                  "example": "any"
+                },
+                "emergency_contact_secondary": {
+                  "example": "any"
+                },
+                "health_number": {
+                  "example": "any"
+                },
+                "diet_specific": {
+                  "example": "any"
+                },
+                "diet_description": {
+                  "example": "any"
+                },
+                "allergies": {
+                  "example": "any"
+                },
+                "allergies_description": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "arrival_date": {
+                  "example": "any"
+                },
+                "departure_date": {
+                  "example": "any"
+                },
+                "lodging_type": {
+                  "example": "any"
+                },
+                "lodging_description": {
+                  "example": "any"
+                },
+                "terms_understood": {
+                  "example": "any"
+                },
+                "media_consent_internal": {
+                  "example": "any"
+                },
+                "media_consent_external": {
+                  "example": "any"
+                },
+                "media_release_understood": {
+                  "example": "any"
+                },
+                "form_completed_by": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
